# besafe

./: .gitignore  Dockerfile  README.md  fly.toml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  restart.sh  runserver.sh
besafe/: __init__.py  admin.py  asgi.py  context_processors.py  middleware.py  mixins.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
besafe/migrations/: 0001_initial.py  0002_alter_contentshero_subtitle.py  0003_alter_contentshero_subtitle.py  0004_alter_contentshero_button_url.py  0005_contentshero_button_text_and_more.py  0006_contentsnews.py  0007_contentscustomers.py  0008_tag_contentsportfolio.py  0009_alter_tag_title_alter_tag_url.py  0010_roles_rename_contentscustomers_contentscustomer_and_more.py  0011_rename_roles_role.py  0012_alter_contentsteammate_banner_img.py  0013_contentsconsulting.py  0014_alter_contentsnews_subtitle.py  0015_contentsportfolio_thumbnail_img_and_more.py  0016_media.py  0017_media_name.py  0018_contentshero_button_target.py  0019_alter_contentsportfolio_content_and_more.py
besafe/models/: __init__.py  base.py  contents.py
inquiry/: admin.py  forms.py  models.py  views.py
renew/: urls.py  views.py
subscription/: admin.py  models.py
templates/: base.html  consultingComplete_07.html  contract.html  contract_page.html  index.html  intro-biz.html  intro-service.html  intro.html  introduce_02.html  main.html  maintenance.html  portfolio.html  portfolio_04.html  program.html  program_03.html  service.html  serviceCenter_05.html  signin.html  subscription.html  write-contract.html
(+120 files in other folders)
